Modify app files according next task

--- a/oldDadApp/Views/Home/Index.cshtml
+++ b/oldDadApp/Views/Home/Index.cshtml
@@ -11,8 +11,8 @@
 
 <div class='alert alert-warning'>
     <h3>Environment</h3>
-	<hr /><b>Build:</b> #{Build.BuildNumber}#
-    <hr /><b>Machine:</b> @System.Environment.MachineName
+    <hr /><b>Build:</b> #{Build.BuildNumber}#
+    <br /><b>Machine:</b> @System.Environment.MachineName
     <br /><b>OS:</b> @System.Environment.OSVersion
     <br /><b>Framework:</b> @System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription
 </div>
